# dnaland

./: README.md
ancestry-computation/: README.md  configure  configure.ac  contributors.txt
ancestry-computation/ancestry/: README.md  config.h.in
ancestry-computation/ancestry/src/: Data23.h  Makefile.am  Makefile.in  summarize_bootstrap.py
ancestry-computation/src/: Ancestry_params.cpp  Ancestry_params.h  Data23.cpp  FreqData.cpp  FreqData.h  ancestry.cpp  relfinder.cpp
ancestry-computation/testing/: clusters
dnaland-frontend/: run.py
dnaland-frontend/dnaland/: __init__.py
dnaland-report-viewer/: README.md  run.py
dnaland-report-viewer/dnaland/: WebForms.py
dnaland-report-viewer/dnaland/static/: bower.json
germline-relative-matching/: BasicDefinitions.h  GERMLINE_0001.cpp  Individuals.cpp  Individuals.h  MarkerSet.h  SNPs.h
germline-relative-matching/test/: CEU.22.ped.newonly  CEU.22.ped.oldonly  expected.match.sorted  generated.old.match  oldIndivIds.txt
improved-ersa-relative-matching/: README.md  setup.py
incremental-relative-matching/: .gitignore  Cache.cpp  Cache.h  Chromosome.cpp  Chromosome.h  GERMLINE.cpp  Individual.cpp  Individual.h  InputManager.cpp  Makefile  MarkerSet.cpp  Match.cpp  MatchFactory.cpp  MatchFactory.h  MatchesBuilder.cpp  MatchesBuilder.h  PEDIndividualsExtractor.cpp  README.md  SNP.cpp  SNPs.cpp  Share.cpp  std_string_trim.h
incremental-relative-matching/test/: CEU.22.ped.f5rot  a  b  expected.AddedIds  generated.AddedIds  generated.match  test.old.run
integration-with-geni/: README.md  index.html
(+56 files in other folders)
